// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LongReadHeader should show a full featured long read header 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "flexShrink": 0,
        "height": 500,
        "justifyContent": "flex-end",
        "marginTop": -10,
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#999999",
      },
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "https://d2cf1ljtg904cv.cloudfront.net/issue/media/phone/media/path/to/image.png",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "rgba(0,0,0,.25)",
          "width": "100%",
        },
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "marginEnd": 24,
          "padding": 12,
          "paddingVertical": 6,
        },
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#999999",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 0.5,
            "marginBottom": 3,
            "paddingBottom": 18,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#999999",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "flexShrink": 0,
              "fontFamily": "GTGuardianTitlepiece-Bold",
              "fontSize": 18,
              "lineHeight": 21,
              "marginTop": 2,
            },
            Array [
              Object {
                "color": "#121212",
              },
            ],
            Object {
              "color": "#121212",
            },
          ]
        }
      >
        News
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#121212",
            "flexShrink": 0,
            "fontFamily": "GHGuardianHeadline-Regular",
            "fontSize": 28,
            "lineHeight": 30,
            "marginTop": 4,
          },
          Array [
            Object {},
            Object {
              "color": "#121212",
            },
            Object {},
          ],
        ]
      }
    >
      Theresa May makes final speech as PM
    </Text>
  </View>
  <View>
    <View
      style={
        Array [
          Object {
            "marginBottom": 12,
            "marginTop": 12,
            "paddingTop": 3,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#999999",
          },
          Object {
            "alignContent": "stretch",
            "alignItems": "stretch",
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "flexShrink": 0,
              "fontFamily": "GuardianTextEgyptian-Reg",
              "fontSize": 17,
              "lineHeight": 21,
            },
            Array [
              Object {
                "color": "#121212",
              },
              Object {},
            ],
          ]
        }
      >
        Rolling coverage of the day’s political developments as they happen
      </Text>
    </View>
  </View>
  <RNSVGSvgView
    bbHeight={16}
    bbWidth="100%"
    fill="none"
    height={16}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        undefined,
        null,
        Object {
          "flex": 0,
          "height": 16,
          "width": "100%",
        },
      ]
    }
    width="100%"
  >
    <RNSVGGroup
      fill={null}
      fillOpacity={1}
      fillRule={1}
      font={Object {}}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth={1}
      vectorEffect={0}
      x={0}
      y={0}
    >
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={0}
      />
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={4}
      />
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={8}
      />
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={12}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Text
    style={
      Array [
        Object {
          "flexShrink": 0,
          "fontFamily": "GuardianTextEgyptian-Reg",
          "fontSize": 17,
          "lineHeight": 21,
        },
        Object {
          "fontFamily": "GuardianTextEgyptian-Bold",
        },
        Array [
          Object {
            "color": "#121212",
          },
          Object {
            "marginBottom": 12,
          },
          Object {
            "color": "#121212",
          },
        ],
      ]
    }
  >
    Andrew Sparrow
  </Text>
</View>
`;

exports[`LongReadHeader should show long read header without an image or a kicker 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "flexShrink": 0,
        "height": 500,
        "justifyContent": "flex-end",
        "marginTop": -10,
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#999999",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginEnd": 24,
          "padding": 12,
          "paddingVertical": 6,
        },
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#999999",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#121212",
            "flexShrink": 0,
            "fontFamily": "GHGuardianHeadline-Regular",
            "fontSize": 28,
            "lineHeight": 30,
            "marginTop": 4,
          },
          Array [
            Object {},
            Object {
              "color": "#121212",
            },
            Object {},
          ],
        ]
      }
    >
      Theresa May makes final speech as PM
    </Text>
  </View>
  <View>
    <View
      style={
        Array [
          Object {
            "marginBottom": 12,
            "marginTop": 12,
            "paddingTop": 3,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#999999",
          },
          Object {
            "alignContent": "stretch",
            "alignItems": "stretch",
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "flexShrink": 0,
              "fontFamily": "GuardianTextEgyptian-Reg",
              "fontSize": 17,
              "lineHeight": 21,
            },
            Array [
              Object {
                "color": "#121212",
              },
              Object {},
            ],
          ]
        }
      >
        Rolling coverage of the day’s political developments as they happen
      </Text>
    </View>
  </View>
  <RNSVGSvgView
    bbHeight={16}
    bbWidth="100%"
    fill="none"
    height={16}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        undefined,
        null,
        Object {
          "flex": 0,
          "height": 16,
          "width": "100%",
        },
      ]
    }
    width="100%"
  >
    <RNSVGGroup
      fill={null}
      fillOpacity={1}
      fillRule={1}
      font={Object {}}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth={1}
      vectorEffect={0}
      x={0}
      y={0}
    >
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={0}
      />
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={4}
      />
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={8}
      />
      <RNSVGRect
        fill={
          Array [
            0,
            4279374354,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        rx={0}
        ry={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        width="100%"
        x={0}
        y={12}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Text
    style={
      Array [
        Object {
          "flexShrink": 0,
          "fontFamily": "GuardianTextEgyptian-Reg",
          "fontSize": 17,
          "lineHeight": 21,
        },
        Object {
          "fontFamily": "GuardianTextEgyptian-Bold",
        },
        Array [
          Object {
            "color": "#121212",
          },
          Object {
            "marginBottom": 12,
          },
          Object {
            "color": "#121212",
          },
        ],
      ]
    }
  >
    Andrew Sparrow
  </Text>
</View>
`;
